# mu-write

./: .gitignore  README.md  Vela功能差距清单.md  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  uno.config.ts  vite.config.ts
docs/: AI_COMMANDS.md  codex-cli.md
electron/llm/: openai-provider.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs
src-tauri/src/commands/: config.rs  db.rs  fs.rs  import.rs  kb.rs  llm.rs  mcp.rs  mod.rs  project.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useOutsideClick.ts
src/lib/: utils.ts
src/services/: architecture-service.ts  deep-link-service.ts  draft-index.ts  export-service.ts  ipc-client.ts  knowledge-service.ts  project-service.ts  project-templates.ts  prompt-templates.ts  review-report.ts  stats-service.ts  style-presets.ts  vela-protocol.ts  version-service.ts  workflow-guards.ts
src/shared/: draft-status.ts  event-bus.ts  ipc-channels.ts  project-paths.ts  provider-presets.ts
src/stores/: character-store.ts  draft-store.ts  editor-store.ts  layout-store.ts  llm-store.ts  mcp-store.ts  project-store.ts  theme-store.ts  workflow-store.ts
src/stories/: Badge.stories.tsx  Button.stories.tsx  Dialog.stories.tsx  Input.stories.tsx  Introduction.stories.mdx  Switch.stories.tsx  Toast.stories.tsx  Tooltip.stories.tsx
src/tokens/: index.ts  spacing.ts
src/utils/: frontmatter.ts  id.ts  time.ts
(+84 files in other folders)
